// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readonly renders correctly when definition is given 1`] = `
<div>
  
   
  test term
   = 
  test explanation
</div>
`;

exports[`readonly renders correctly when definition is not given 1`] = `
<div>
  
   
  
   = 
  
</div>
`;
